--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
+
       - name: Xcodebuild tests
-        working-directory: ios/ClearSplit
         run: |
-          xcodebuild \
+          xcodebuild test \
+            -project ios/ClearSplit/ClearSplit.xcodeproj \
             -scheme ClearSplit \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
             -sdk iphonesimulator \
-            -skipPackagePluginValidation \
-            test
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
+            -skipPackagePluginValidation
