--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -11,12 +11,6 @@ jobs:
     runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
-
-      - name: Xcodebuild tests
+      - name: SwiftPM tests
         run: |
-          xcodebuild test \
-            -project ios/ClearSplit/ClearSplit/ClearSplit.xcodeproj \
-            -scheme ClearSplit \
-            -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
-            -skipPackagePluginValidation
+          swift test --package-path ios/ClearSplit --enable-code-coverage
