--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -11,12 +11,6 @@ jobs:
     runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
-      - name: Xcodebuild tests
-        working-directory: ios/ClearSplit
+      - name: SwiftPM tests
         run: |
-          xcodebuild \
-            -scheme ClearSplit \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
-            -sdk iphonesimulator \
-            -skipPackagePluginValidation \
-            test
+          swift test --package-path ios/ClearSplit --enable-code-coverage
