--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ pydantic==2.8.2
 pydantic-settings==2.3.3
 python-dotenv==1.0.1
 pytest==8.3.2
+pytest-asyncio==0.25.2
 httpx==0.27.0
 bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
