ci: Add Docker build and publish pipeline to GHCR
Added complete Docker CD pipeline for automated image publishing.

New Files:
----------
1. .github/workflows/docker-publish.yml
   - Builds and publishes to GitHub Container Registry (GHCR)
   - Triggers on: push to main, version tags (v*), manual dispatch
   - Reuses CI workflow (only publishes if tests pass)
   - Multi-platform builds (amd64 + arm64)
   - BuildKit caching for fast rebuilds
   - Build provenance attestation for supply chain security

2. backend/.dockerignore
   - Excludes dev files, tests, docs from image
   - Reduces image size and build time
   - Keeps sensitive files out of container

3. backend/DOCKER_DEPLOYMENT.md
   - Complete Docker deployment guide
   - Pull/run commands with all env vars
   - docker-compose example
   - Production setup guide
   - Troubleshooting section

Modified Files:
---------------
backend/Dockerfile - Production-ready improvements:
   - Multi-stage build (smaller final image)
   - Python 3.12-slim base (was 3.11)
   - Non-root user (appuser) for security
   - Health check built-in
   - Proper permissions and ownership
   - No dev dependencies in final image
   - BuildKit optimized layers

Docker Features:
----------------
 Security:
   - Non-root user execution
   - Minimal base image (slim)
   - No build tools in final image
   - Build provenance attestation

 Production-Ready:
   - Health checks (30s interval)
   - Multi-platform (amd64, arm64)
   - Configurable via env vars
   - Proper signal handling

 Performance:
   - Multi-stage build
   - BuildKit cache layers
   - GitHub Actions cache
   - Optimized layer ordering

Image Tags:
-----------
Push to main:
  - ghcr.io/yslim-030622/clearsplit/api:latest
  - ghcr.io/yslim-030622/clearsplit/api:main-<sha>

Push tag v1.2.3:
  - ghcr.io/yslim-030622/clearsplit/api:v1.2.3
  - ghcr.io/yslim-030622/clearsplit/api:1.2
  - ghcr.io/yslim-030622/clearsplit/api:1
  - ghcr.io/yslim-030622/clearsplit/api:latest

Required Env V

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,51 @@
-FROM python:3.11-slim
+# Build stage
+FROM python:3.12-slim AS builder
 
 WORKDIR /app
 
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --user -r requirements.txt
 
-COPY app ./app
-COPY alembic.ini .
-COPY alembic ./alembic
+# Production stage
+FROM python:3.12-slim
 
+WORKDIR /app
+
+# Create non-root user
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Copy Python dependencies from builder
+COPY --from=builder /root/.local /home/appuser/.local
+
+# Copy application code
+COPY --chown=appuser:appuser app ./app
+COPY --chown=appuser:appuser alembic.ini .
+COPY --chown=appuser:appuser alembic ./alembic
+
+# Set PATH to include user site-packages
+ENV PATH=/home/appuser/.local/bin:$PATH
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
 
+# Switch to non-root user
+USER appuser
+
+# Expose port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
+
+# Start application with uvicorn
+# Override with environment variables:
+# - UVICORN_HOST (default: 0.0.0.0)
+# - UVICORN_PORT (default: 8000)
+# - UVICORN_WORKERS (default: 1, set to CPU count for production)
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
