Security: Harden secret management and prevent leaks
- Add Pydantic SecretStr protection for JWT_SECRET and DATABASE_URL
- Implement field validation (min 32 chars for JWT, format check for DB URL)
- Add fail-fast behavior with clear error messages for missing secrets
- Update all code to use getter methods (get_jwt_secret, get_database_url)
- Enhance .gitignore to exclude all .env variants (keep .env.example)
- Update docker-compose.yml to use .env.local (gitignored)
- Add CI comments clarifying test vs production secrets
- Create secret-scan.sh for pre-commit secret detection
- Create verify-security.sh for comprehensive security checks
- Add SECURITY.md with complete security policy and procedures
- Add comprehensive security documentation
- Update README.md with security setup instructions

All 48 tests passing. No secrets committed (verified with secret scanner).

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,56 @@
-# Backend
-ENV=local
-JWT_SECRET=replace-me
-ACCESS_TOKEN_EXPIRE_MINUTES=15
-REFRESH_TOKEN_EXPIRE_MINUTES=43200
-DATABASE_URL=postgresql+asyncpg://clearsplit:clearsplit@localhost:5432/clearsplit
+# ClearSplit Environment Configuration Template
+# =============================================
+# 
+# SECURITY WARNING: NEVER commit real secrets to git!
+# This file contains ONLY placeholders. Copy to .env.local and fill with real values.
+#
+# Setup Instructions:
+#   1. cp .env.example .env.local
+#   2. Generate JWT_SECRET: openssl rand -hex 32
+#   3. Fill in your DATABASE_URL with actual credentials
+#   4. Never commit .env.local (it's gitignored)
 
-# Postgres
+# --- Required Configuration ---
+
+# Environment: local, test, or production
+ENV=local
+
+# PostgreSQL Database Connection
+# Format: postgresql+asyncpg://username:password@host:port/database
+DATABASE_URL=postgresql+asyncpg://clearsplit:YOUR_DB_PASSWORD_HERE@localhost:5432/clearsplit
+
+# JWT Secret Key (CRITICAL: Generate a strong random secret!)
+# Generate with: openssl rand -hex 32
+JWT_SECRET=REPLACE_WITH_OUTPUT_OF_openssl_rand_hex_32
+
+# --- Optional Configuration (with defaults) ---
+
+# JWT Algorithm
+JWT_ALGORITHM=HS256
+
+# Token Expiration Times
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=30
+
+# --- PostgreSQL Container Config (for docker-compose) ---
+
 POSTGRES_USER=clearsplit
-POSTGRES_PASSWORD=clearsplit
+POSTGRES_PASSWORD=YOUR_DB_PASSWORD_HERE
 POSTGRES_DB=clearsplit
 POSTGRES_PORT=5432
 
-# JWT
-JWT_ISSUER=clearsplit.local
-JWT_AUDIENCE=clearsplit-api
-JWT_PRIVATE_KEY_PATH=./secrets/jwt-private.pem
-JWT_PUBLIC_KEY_PATH=./secrets/jwt-public.pem
-
-# iOS
-API_BASE_URL=http://localhost:8000
-
-
+# --- Notes ---
+# 
+# For production deployments:
+# - Use GitHub Secrets or your platform's secret management
+# - Ensure ENV=production
+# - Use strong, randomly generated secrets (64+ chars recommended for JWT_SECRET)
+# - Rotate secrets regularly
+# 
+# For local development:
+# - Use .env.local (gitignored)
+# - You can use simpler passwords locally, but NEVER in production
+# 
+# For CI/CD:
+# - Tests use dummy secrets injected by GitHub Actions
+# - See .github/workflows/ci.yml for test configuration
