--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,47 @@
 # General
 .DS_Store
+
+# Environment variables (NEVER commit secrets!)
 .env
+.env.*
+*.env
+!.env.example
+.envrc
+
+# Python virtual environments
 .venv
 venv/
+ENV/
+env/
+
+# Python cache
 __pycache__/
 .pytest_cache/
 .mypy_cache/
+*.py[cod]
+*$py.class
 
 # Python build
 *.egg-info/
 .ruff_cache/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs (may contain sensitive data)
+*.log
+logs/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # Swift/Apple
 DerivedData/
@@ -20,8 +52,18 @@ xcuserdata/
 **/*.xcodeproj/xcuserdata/
 **/*.xcworkspace/xcuserdata/
 
-# SwiftPM local artifacts (ok to ignore)
+# SwiftPM local artifacts
 .swiftpm/
 .build/
+
 # Node/others
 node_modules/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# OS files
+Thumbs.db
